23 JUN 2023
Improved layout and styling.
Added Collapsable QR code.
Calculate TLE of closest target.

24 JUL 2022
Bug fix mobile screen layout was obscuring the tabs.

22 JUL 2022
Clients alert user if socket connection is lost.
FDC attempts to resume same game on reconnect. Server checks if users still in room.
Bug fix for compass bearing in custom scenarios.
Server stores target hits. New FO join informed of target states and sets hits on startup.


20 JUL 2022
Added creating custom scenario with random targets
Added check for danger close and warn FDC
Added event log for FDC
Settings shows current OP Location as placeholder
Shift fire (ad/drop) now resets after fired
Send target info in Hit message
FO client sends message when ready
Mobile users get different instruction screen
Improved server logging with roomName

31 MAY 2022
Added settings tab with ability to update the observer location
Added magnetic north to compass and ability to urn on/off in settings
FDC gets a count of FO's
updated package.JSON
renamed server side index.js to server.js

28 MAY 2022
Enter key in input boxes of fire commands will submit fire mission
Enter key in input box box for game code will join mission
Change padGrid() to return null if bad grid, and changed sendFireMission() and fireForEffect() to error check if grid is null and not send fire mission to server

25 MAY 2022
Add loading splash screen, with instructions and progress bar (add loadscreen AFRAM component)
  moved setCamView(cam) to observer.js file (used by the splash screen)
  Compass set to visible when first loaded (to load and render on first pass) then hide before splash screen off
GPS display is HTML overlay instead of 3D object. Div created by the AFRAME component.

23 MAY 2022
Added a light as part of the compass rig.
a-entity light="type: spot; color: #FFF; intensity: 0.5; target: #compassface; distance: 0.7; angle: 50; decay: 0.02;" position="0.01 0.5 0.05"