@@ -1,3 +1,7 @@
+29 AUG 2024
+changed cdn links from .global to .com  (.global was being blocked)
+added a filter to target list to handle NaN values
+
 23 JUN 2023
 Improved layout and styling.
 Added Collapsable QR code.
